--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ html {
 }
 
 body {
+  background-image:url('img/gif.gif');
  background-size : cover;
  background-repeat:no repeat;
   color: #e1e1f1;
@@ -22,7 +23,7 @@ body {
 
 }
 
-.video-background {
+/* .video-background {
   position: fixed;
   top: 0;
   right: 0;
@@ -31,7 +32,7 @@ body {
   overflow: hidden;
   z-index: -100;
   background: #000; /* Warna latar belakang hitam */
-}
+/* }
 
 .video-background video {
   min-width: 100%;
@@ -42,7 +43,7 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-}
+} */ 
 
 p {
   text-align:center;
@@ -208,7 +209,7 @@ ul.links li:not(:last-child) {
 /* Media Mobile */
 @media screen and (max-width: 767px) {
   .bg2-text-animation {
-    font-size: 5rem; /* Sesuaikan ukuran teks untuk smartphone */
+    font-size: 6.3rem; /* Sesuaikan ukuran teks untuk smartphone */
     top:5.3rem;
     display:block;
   }
